part2/2.09/project-frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: project-frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-frontend
  template:
    metadata:
      labels:
        app: project-frontend
    spec:
      containers:
        - name: project-frontend
          image: laurihakala/project-frontend:47e7630d0c47
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
