part2/2.09/project-frontend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: project-material-ingress 
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-frontend-svc
            port: 
              number: 2345
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: project-backend-svc
            port: 
              number: 2345
